--- a/EduSweep 2/Forms/TaskProgress.resx
+++ b/EduSweep 2/Forms/TaskProgress.resx
@@ -161,6 +161,9 @@
   <data name="labelResultsMinor.Text" xml:space="preserve">
     <value>The files below were detected during the scan process. You can move them to quarantine to act on later or remove them permanently. Use Show File to see a file's containing folder or Inspect to see more details.</value>
   </data>
+  <metadata name="contextMenuStripResults.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>762, 17</value>
+  </metadata>
   <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -171,10 +174,10 @@
     <value>328, 17</value>
   </metadata>
   <metadata name="timerLocations.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>611, 17</value>
+    <value>511, 17</value>
   </metadata>
   <metadata name="timerResults.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>743, 17</value>
+    <value>643, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>85</value>
